chore: Prettify everything

--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "build": "run-s clean && run-p build:main",
     "build:main": "tsc -p tsconfig.json",
     "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
+    "fix:prettier": "prettier . --write",
     "fix:eslint": "eslint --fix src",
     "static-checks": "run-p static-checks:*",
     "static-checks:lint": "eslint src",
-    "static-checks:prettier": "prettier \"src/**/*.ts\" --list-different",
+    "static-checks:prettier": "prettier . --list-different",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:integration": "exit 0",
     "doc-api": "typedoc src/index.ts --out build/docs",
