chore: Specify semantic-release branch explicitly

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "prettier": "@relaycorp/shared-config/.prettierrc.json",
   "release": {
+    "branches": ["main"],
     "extends": "@relaycorp/shared-config"
   }
 }
