--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
 {
-  "extends": "@relaycorp/shared-config",
+  "extends": "@relaycorp/shared-config/libs/tsconfig.json",
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "module": "esnext",
-    "outDir": "build/lib",
     "rootDir": "src",
-    "target": "es2021",
-    "lib": ["es2022", "dom"],
-    "types": ["node", "jest"],
-    "typeRoots": ["node_modules/@types"]
+    "outDir": "build/lib"
   },
   "include": ["src/**/*.ts", "src/**/*.mjs"]
 }
