--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "static-checks:prettier": "prettier . --list-different",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:integration": "exit 0",
-    "doc-api": "typedoc src/index.ts --out build/docs",
+    "doc-api": "typedoc",
     "clean": "del-cli build"
   },
   "devDependencies": {
     "@jest/globals": "^29.6.0",
     "@relaycorp/eslint-config": "^1.1.120",
-    "@relaycorp/shared-config": "^1.11.4",
+    "@relaycorp/shared-config": "^1.12.1",
     "@types/jest": "^29.5.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.45.0",
@@ -46,7 +46,7 @@
     "npm-run-all2": "^6.0.6",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.24.7",
+    "typedoc": "^0.24.8",
     "typescript": "^5.0.4"
   },
   "publishConfig": {
