--- a/package.json
+++ b/package.json
@@ -49,6 +49,13 @@
     "typedoc": "^0.24.8",
     "typescript": "^5.0.4"
   },
+  "dependencies": {
+    "cloudevents": "^8.0.0",
+    "date-fns": "^2.30.0"
+  },
+  "peerDependencies": {
+    "cloudevents": ">= 8.0.0, < 9.0.0"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -61,9 +68,5 @@
       "main"
     ],
     "extends": "@relaycorp/shared-config"
-  },
-  "dependencies": {
-    "cloudevents": "^8.0.0",
-    "date-fns": "^2.30.0"
   }
 }
