--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@jest/globals": "^29.6.0",
     "@relaycorp/eslint-config": "^1.1.120",
-    "@relaycorp/shared-config": "^1.12.1",
+    "@relaycorp/shared-config": "^1.13.0",
     "@types/jest": "^29.5.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.46.0",
@@ -50,7 +50,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "cloudevents": "^8.0.0",
+    "cloudevents": ">= 8.0.0, < 9.0.0",
     "date-fns": "^2.30.0"
   },
   "peerDependencies": {
